--- a/app/src/main/res/menu/animalinfo_menu.xml
+++ b/app/src/main/res/menu/animalinfo_menu.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:id="@+id/delect_menu"
-        android:icon="@android:drawable/ic_delete"
+        android:id="@+id/menu_modify"
+        android:icon="@drawable/edit_24px"
+        android:title="수정"
+        app:showAsAction="always|never" />
+    <item
+        android:id="@+id/menu_delect"
+        android:icon="@drawable/delete_24px"
+        android:title="삭제"
         app:showAsAction="always" />
 </menu>
