--- a/app/src/main/res/layout/activity_input_animal.xml
+++ b/app/src/main/res/layout/activity_input_animal.xml
@@ -25,6 +25,7 @@
             android:id="@+id/toggleGroup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:checkedButton="@id/lionButton"
             app:selectionRequired="true"
             app:singleSelection="true">
 
