--- a/app/src/main/res/layout/activity_input_animal.xml
+++ b/app/src/main/res/layout/activity_input_animal.xml
@@ -97,7 +97,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <com.google.android.material.button.MaterialButtonToggleGroup
                         android:id="@+id/toggleGroup2"
@@ -127,6 +127,7 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
                         android:hint="털의 갯수"
                         app:endIconMode="clear_text">
 
@@ -172,6 +173,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:stepSize="1"
                         android:valueFrom="50"
                         android:valueTo="200" />
                 </LinearLayout>
