--- a/app/src/main/res/layout/activity_input_animal.xml
+++ b/app/src/main/res/layout/activity_input_animal.xml
@@ -145,7 +145,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -165,7 +165,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="몸무게 "
+                        android:text="몸무게 : 50"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                     <com.google.android.material.slider.Slider
@@ -173,7 +173,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:stepSize="1"
+                        android:stepSize="1.0"
                         android:valueFrom="50"
                         android:valueTo="200" />
                 </LinearLayout>
@@ -184,7 +184,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
